--- a/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
@@ -1,35 +1,26 @@
+@inherits ItemDisplay<LibraryItem>
 @using MemoryMosaic.Pages
 
 <div class="libraryItem">
-	<img src="data:image/jpg;base64,@LibraryItem.Thumbnail" alt="" loading="lazy"/>
-	<span class="@Import.PathWidth @Type">@("Library/" + LibraryItem.Path)</span>
+	<img src="data:image/jpg;base64,@Item.Thumbnail" alt="" loading="lazy"/>
+	<span class="@PathWidth @TextClass">@("Library/" + Item.Path)</span>
 	
 	<div class="dateDisplay">
-		<span>DT: @(LibraryItem.DateTaken == null ? "No Date Taken" : LibraryItem.DateTaken)</span>
-		<span>DA: @LibraryItem.DateAdded</span>
+		<span>DT: @(Item.DateTaken == null ? "No Date Taken" : Item.DateTaken)</span>
+		<span>DA: @Item.DateAdded</span>
 	</div>
 	
-	<span>@(LibraryItem.DateDeleted != null ? "In Trash" : "")</span>
+	<span>@(Item.DateDeleted != null ? "In Trash" : "")</span>
 	<IconButton Icon="trash" OnClick="@DeleteBtnClick"/>
 </div>
 
 @code {
-	[Parameter, EditorRequired] public Import Import { get; set; } = null!;
-	
-	[Parameter, EditorRequired] public LibraryItem LibraryItem { get; set; } = null!;
-
-	[Parameter, EditorRequired]
-	public int Index { get; set; }
-	
-	[Parameter, EditorRequired]
-	public required string Type { get; set; }
-
 	private void DeleteBtnClick()
 	{
-		if (LibraryItem.DateDeleted == null)
-			C.MoveToTrash(LibraryItem.Id);
-		C.RemoveFromTrash(LibraryItem);
-		Import.LibraryCache.Remove(LibraryItem.Path);
+		if (Item.DateDeleted == null)
+			C.MoveToTrash(Item.Id);
+		C.RemoveFromTrash(Item);
+		Import.LibraryCache.Remove(Item.Path);
 		Import.Rerender();
 	}
 }
