Create Import.Content. Add full FV support for import and library items.
This might be inefficient, so might need to revisit this approach later.

One idea I have is we could only update Content when something on the page actually changes, versus every time FV is toggled.

--- a/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
@@ -2,7 +2,7 @@
 @using MemoryMosaic.Pages
 
 <div class="libraryItem">
-	<img src="data:image/jpg;base64,@Item.Thumbnail" alt="" loading="lazy"/>
+	<img src="data:image/jpg;base64,@Item.Thumbnail" alt="" @onclick="@ThumbnailClicked" loading="lazy"/>
 	<span class="@PathWidth @TextClass">@("Library/" + Item.Path)</span>
 	
 	<div class="dateDisplay">
