--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -19,10 +19,17 @@
 	}
 	
 	<div id="stats">
-		@if (ErrorAmount > 0)
-		{
-			<span style="color: red">@ErrorAmount @(ErrorAmount == 1 ? "Error" : "Errors")</span>
-		}
+		<div>
+			@if (ErrorAmount > 0)
+			{
+				<span style="color: red">@ErrorAmount @(ErrorAmount == 1 ? "Error" : "Errors")</span>
+			}
+			
+			@if (displayWarnings && WarningAmount > 0)
+			{
+				<span style="color: yellow">@WarningAmount @(WarningAmount == 1 ? "Warning" : "Warnings")</span>
+			}
+		</div>
 	</div>
 	
 	@if (ErrorAmount == 0 && !EditingFilename)
