Change more setting dropdown to not use Dropdown component
Was causing page to not scroll when visible... 🤷‍♂️

--- a/MemoryMosaic/Styles/Components/Modal/Dropdown.scss
+++ b/MemoryMosaic/Styles/Components/Modal/Dropdown.scss
@@ -1,8 +1,8 @@
+@import "../../Mixins";
+
 .dropdown {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    background-color: black;
-    border: 1px solid white;
-    z-index: 99999;
+	@include flex-col;
+	background-color: black;
+	border: 1px solid white;
+	z-index: 99999;
 }
