Inline calculation of search results file sizes total

--- a/MemoryMosaic/Pages/Import/Import.razor
+++ b/MemoryMosaic/Pages/Import/Import.razor
@@ -34,7 +34,7 @@
 			else
 			{
 				<span>@SearchResults.Length Items</span>
-				<span>@F.FormatBytes(CalculateSizeOfItems(SearchResults))</span>
+				<span>@F.FormatBytes(SearchResults.Sum(item => item.Size))</span>
 			}
 		</div>
 
