Add version number const to Program

--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -141,7 +141,10 @@
             }
             <span>Server went online at @whenWentOnline</span>
             <span>Server has been online for @(DateTime.Now - whenWentOnline)</span>
+                                                                             
         }
+        
+        <span>MemoryMosaic Version: @Program.Version</span>
     </div>
 
     @if (Program.Debug)
