Fix FV potentially adding extra extension when cancelling renaming current item

--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -304,7 +304,7 @@
 	{
 		fileRename.Disable();
 		filenameError.Disable();
-		newFilename = CurrentLi != null ? CurrentLi.Filename : CurrentIi!.NewFilename;
+		newFilename = CurrentLi != null ? CurrentLi.FilenameWithoutExtension : CurrentIi!.NewFilename;
 	}
 
 	private void MoveLeft()
