Change some things from long to int

--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -186,7 +186,7 @@
     
     //Stats
     private bool statsLoaded;
-    private long libraryRowCount, trashRowCount, collectionsCount;
+    private int libraryRowCount, trashRowCount, collectionsCount;
     private long totalUsableDriveSize; //How much space the drive mm_library is on could have. E.g., on a 1 TB drive it returns ~930 GB. The rest is probably reserved for the OS.
     private long freeDriveSpace; //Bytes
     private long librarySize; //Bytes
