ToggleableComponent inheritors can now control if they toggle page scrolling

--- a/MemoryMosaic/Shared/Modal/ToggleableComponent.razor
+++ b/MemoryMosaic/Shared/Modal/ToggleableComponent.razor
@@ -10,10 +10,15 @@
 
 	public bool Visible => Visibility.Visible;
 	
+	protected virtual bool CanControlScrolling => true;
+	
 	private void UpdateState(bool newState)
 	{
 		Visibility.Visible = newState;
-		JSRuntime.InvokeVoidAsync($"{(Visibility.Visible ? "disable" : "enable")}BackgroundScrolling");
+		
+		if (CanControlScrolling)
+			JSRuntime.InvokeVoidAsync($"{(Visibility.Visible ? "disable" : "enable")}BackgroundScrolling");
+		
 		StateHasChanged();
 	}
 }
