Dropdown no longer prevents page scrolling

--- a/MemoryMosaic/Shared/Modal/Dropdown.razor
+++ b/MemoryMosaic/Shared/Modal/Dropdown.razor
@@ -10,4 +10,6 @@
 	[Parameter, EditorRequired] public RenderFragment ChildContent { get; set; } = null!;
 
 	[Parameter, EditorRequired] public string Positioning { get; set; } = "";
+
+	protected override bool CanControlScrolling => false;
 }
